--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation project(":app:home")
     implementation 'androidx.fragment:fragment:1.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -64,5 +65,5 @@ dependencies {
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 }
