--- a/app/find/build.gradle
+++ b/app/find/build.gradle
@@ -11,4 +11,9 @@ dependencies {
     implementation project(":app:base")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Kotlin
+    def nav_version = "2.3.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
