--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,9 +39,9 @@ dependencies {
 
     def room_version = "2.2.6"
 
-    api "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    api "androidx.room:room-ktx:$room_version"
+    api "androidx.room:room-runtime:2.2.6"
+    api "androidx.room:room-ktx:2.2.6"
+    kapt 'androidx.room:room-compiler:2.2.6'
 
 
     testImplementation 'junit:junit:4.13.2'
